# Moe-s-Tavern

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
.moe/: .gitignore  agent-context.md  project.json
.moe/agents/: moe-code-reviewer.md  moe-explorer.md  moe-test-runner.md
.moe/channels/: chan-15c8e232.json  chan-18116c9a.json  chan-421a621d.json  chan-845e71c6.json  chan-b6d8273b.json
.moe/epics/: epic-0110ece1.json  epic-21c5b951.json  epic-2a59fe30.json  epic-3416e860.json  epic-48ac1405.json  epic-5ab0929c.json  epic-7e26d221.json  epic-850ddbe0.json  epic-93811519.json  epic-941ca1ca.json  epic-a205c7a1.json  epic-aabc654d.json  epic-be924fb8.json  epic-bugs.json  epic-c77159a8.json  epic-d1c2cce9.json  epic-d8c8abea.json  epic-daemon.json  epic-ffe3ace6.json  epic-notifications.json  epic-plugin-dialogs.json  epic-settings.json  epic-viewing.json
.moe/messages/: chan-18116c9a.jsonl  chan-6d3746fd.jsonl  chan-b6d8273b.jsonl
.moe/roles/: architect.md  architect.reference.md  governor.md  governor.reference.md  qa.md  qa.reference.md  worker.md  worker.reference.md
.moe/skills/: LICENSE-VENDORED.md  manifest.json
.moe/skills/adversarial-self-review/: SKILL.md
.moe/skills/brainstorming/: SOURCE.md
.moe/skills/cpp/: SKILL.md
.moe/skills/cpp/templates/: CMakeLists.txt  README.md
.moe/skills/dispatching-parallel-agents/: SKILL.md
.moe/skills/explore-before-assume/: SKILL.md
.moe/skills/moe-planning/: SKILL.md
.moe/skills/receiving-code-review/: SKILL.md
.moe/skills/ros2-skill/: SKILL.md
.moe/skills/system-design/: SKILL.md
.moe/skills/systematic-debugging/: SOURCE.md
.moe/skills/test-driven-development/: SKILL.md  SOURCE.md
.moe/skills/using-git-worktrees/: SKILL.md  SOURCE.md
.moe/skills/writing-plans/: SKILL.md  SOURCE.md
.moe/tasks/: task-010df94a.json  task-058b17ed.json  task-06379b69.json  task-0cf4af27.json  task-0e87304d.json  task-0edb9691.json  task-0f0d9905.json  task-11c48d46.json  task-11d9333e.json  task-1209070e.json  task-12d97434.json  task-13e4995f.json  task-160bb39f.json  task-1b48e632.json  task-1c74e448.json  task-1c7b2bae.json  task-1d7b29e9.json  task-1f7201c0.json  task-20654d1a.json  task-2201362a.json  task-238993aa.json  task-255c8b34.json  task-294e9c3c.json  task-29ca3d17.json  task-2adcd382.json  task-2cda8e27.json  task-2fa028b8.json  task-30ba94ef.json  task-30d97dd8.json  task-3209507e.json  task-3245e6cf.json  task-345aee8a.json  task-36b4ba6f.json  task-393c77f9.json  task-394c633e.json  task-3cecbef7.json  task-3d5d47b7.json  task-3dab9c2c.json  task-3dc092d3.json  task-3e050268.json  (+212 more)
.moe/teams/: team-47893c7c.json  team-c45ae8a6.json  team-ceeda973.json
Formula/: moe.rb
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  MAC_INSTALL.md  MARKETPLACE.md  MCP_SERVER.md  MEMORY.md  PLUGIN_SPEC.md  PRD.md  SCHEMA.md  TROUBLESHOOTING.md  UI_SPEC.md  _config.yml  agent-context.md  index.html  style.css
docs/agents/: ARCHITECT.md  README.md  REVIEWER.md  WORKER.md  moe-code-reviewer.md  moe-explorer.md  moe-test-runner.md
docs/images/: README.md
docs/plans/: 2026-04-15-daemon-supervision-design.md
docs/roles/: architect.md  architect.reference.md  governor.md  governor.reference.md  qa.md  qa.reference.md  worker.md  worker.reference.md
docs/skills/: LICENSE-VENDORED.md  manifest.json
docs/skills/brainstorming/: SKILL.md
docs/skills/dispatching-parallel-agents/: SOURCE.md
docs/skills/moe-qa-loop/: SKILL.md
docs/skills/receiving-code-review/: SKILL.md  SOURCE.md
docs/skills/regression-check/: SKILL.md
docs/skills/ros2-skill/: AGENTS.md  CHANGELOG.md  LICENSE
docs/skills/systematic-debugging/: SKILL.md
docs/skills/test-driven-development/: SKILL.md
docs/skills/verification-before-completion/: SKILL.md  SOURCE.md
docs/skills/writing-plans/: SKILL.md
docs/superpowers/specs/: 2026-05-08-release-task-and-architect-governance-design.md
installer/: README.md  moe-installer.iss
moe-jetbrains/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
moe-jetbrains/scripts/: ensure-gradle.ps1  ensure-gradle.sh  ensure-wrapper.ps1  ensure-wrapper.sh
moe-vscode/: .vscodeignore  CHANGELOG.md  MANUAL_TESTS.md  README.md  package-lock.json  package.json  tsconfig.json
moe-vscode/media/: board.js  chat.js  epicDetail.js  planReview.js  settings.js  taskCreate.js  taskDetail.js
moe-vscode/scripts/: bundle-assets.mjs
moe-vscode/src/: extension.ts
moe-vscode/src/panels/: EpicDetailPanel.ts  PlanReviewPanel.ts  SettingsPanel.ts  TaskCreatePanel.ts  TaskDetailPanel.ts
moe-vscode/src/providers/: BoardViewProvider.ts  ChatViewProvider.ts  MetricsViewProvider.ts
moe-vscode/src/services/: MoeDaemonClient.ts
scripts/: build-installer.ps1  build-installer.sh  deploy-plugin.sh  doctor.ps1  doctor.sh  install-all.ps1  install-all.sh  install-mac.sh  install-plugin.ps1  install-plugin.sh  lint-role-docs.ps1  lint-role-docs.sh  moe-agent.ps1  moe-agent.sh  moe-call.sh  moe-team.ps1  moe-team.sh  test-team-quoting.sh
scripts/tests/: postflight.ps1  postflight.sh
(+77 files in other folders)
